Update .gitignore and remove artifact files from tracking
- Enhanced .gitignore with comprehensive artifact patterns
- Removed node_modules and other build artifacts from git tracking
- Cleaned project for GitHub push